# gpt-researcher

./: pyproject.toml  requirements.txt
.github/workflows/: gpt-researcher-AutoDeployTrigger-9268e0f0-9baf-4007-af65-ebcd34543ed0.yml
gpt_researcher/config/: config.py
gpt_researcher/master/: functions.py  prompts.py
